[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/startmenu.gd" type="Script" id=1]
[ext_resource path="res://Sky.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://screens/startmenu.theme" type="Theme" id=4]
[ext_resource path="res://music/dova_Mauve Rhopalocera_master.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0.105882, 0.388235, 0.682353, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=6]
action = "quit"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 20.0
autoplay = true

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1083.0
rect_pivot_offset = Vector2( 960, 540 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -339.0
margin_top = -27.0
margin_right = 392.0
margin_bottom = 366.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.45098, 0.666667, 0.164706, 1 )
custom_colors/font_outline_modulate = Color( 0.811765, 0.54902, 0.141176, 1 )
custom_colors/font_color_shadow = Color( 0.478431, 0.164706, 0.164706, 1 )
custom_fonts/font = SubResource( 1 )
text = "Not A Plant
Any More
"
align = 1
valign = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 334.0
margin_top = -93.0
margin_right = 734.0
margin_bottom = 307.0
rect_min_size = Vector2( 400, 400 )
custom_constants/separation = 25

[node name="Startbtn" type="Button" parent="MainMenu"]
margin_right = 400.0
margin_bottom = 67.0
text = "START"

[node name="Controls" type="Button" parent="MainMenu"]
margin_top = 92.0
margin_right = 400.0
margin_bottom = 159.0
custom_colors/font_color_hover = Color( 0.662745, 0.392157, 0.882353, 1 )
text = "Controls"

[node name="CreditBtn" type="Button" parent="MainMenu"]
margin_top = 184.0
margin_right = 400.0
margin_bottom = 251.0
custom_colors/font_color_hover = Color( 0.956863, 0.937255, 0.431373, 1 )
text = "Credits"

[node name="QuitBtn" type="Button" parent="MainMenu"]
margin_top = 276.0
margin_right = 400.0
margin_bottom = 400.0
size_flags_vertical = 3
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
shortcut = SubResource( 7 )
text = "Quit"

[connection signal="pressed" from="MainMenu/Startbtn" to="." method="_on_Startbtn_pressed"]
[connection signal="pressed" from="MainMenu/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="MainMenu/CreditBtn" to="." method="_on_CreditBtn_pressed"]
[connection signal="pressed" from="MainMenu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
